# mf6Voronoi

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docker/: README.md  dockercompose.yml  jupyter.Dockerfile  requirements.txt
examples/figures/: ex1regionalModel.pgw  ex3riverAquifer.pgw  ex3siteDewatering.pgw  ex4trenchExcavation.pgw  ex5stibniteMine.pgw  voronoiMeshinModflow6Disv.pgw
examples/notebooks/: Example1.ipynb  ex1_regionalModel.ipynb  ex1_regionalModel_debug.ipynb  ex2_riverAquifer.ipynb  ex2_riverAquiferInteraction.ipynb  ex3_siteDewatering.ipynb  ex5_stibniteMine.ipynb  hatariLogo.ipynb  usefulInstructions.txt
examples/txt/: hatariLogo.ipynb  mf6Examples.csv  usefulInstructions.txt
hatariTools/models/: graphs2d.py
mf6Voronoi/: geoUtils.py  geoVoronoi copy.py  geoVoronoi.py  meshProperties.py  utils.py
mf6Voronoi/.ipynb_checkpoints/: geoUtils-checkpoint.py  geoVoronoi-checkpoint.py
mf6Voronoi/tools/: cellWork.py  graphs2d.py  vtkGen.py
mf6models/openPit/: mf6Model.disv  mf6Model.drn  mf6Model.evta  mf6Model.ic  mf6Model.ims  mf6Model.nam  mf6Model.npf  mf6Model.oc  mf6Model.rcha  mf6Model.sto  mf6Model.tdis  mfsim.nam
script/: ex4_trenchExcavation.ipynb  ex5_stibniteMine.ipynb  p1_vorMesh_regionalModel.ipynb
tests/createVoronoi/: testEx1RegionalModel.py
tests/createVoronoiTests/: reviewMesh.ipynb  runAllTests.sh  testEx1RegionalModel.py  testEx2RiverAquifer.py  testEx3SiteDewatering.py  testEx4TrenchExcavation.py  testEx5stibniteMine.py
voronoiMeshMF6/: geoUtils.py  geoVoronoi.py  meshProperties.py
(+895 files in other folders)
